css changes: semi transparent gradient body, body radius, header and footer color and margin

--- a/index.html
+++ b/index.html
@@ -24,9 +24,13 @@
             <div class="header-actions">
                 <div class="search-bar">
                     <input type="text" placeholder="Procurar">
-                    <span class="search-icon">🔍</span>
                 </div>
                 <button class="theme-toggle">☀️</button>
+            </div>
+            <div class="window-controls">
+                <button id="min-btn" class="win-btn">-</button>
+                <button id="max-btn" class="win-btn">□</button>
+                <button id="close-btn" class="win-btn">×</button>
             </div>
         </header>
 
